--- a/libft/Makefile
+++ b/libft/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: kzebian <kzebian@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2025/05/24 01:24:56 by afahs             #+#    #+#              #
-#    Updated: 2026/01/04 23:28:45 by kzebian          ###   ########.fr        #
+#    Created: 2026/01/23 20:42:55 by kzebian           #+#    #+#              #
+#    Updated: 2026/01/23 20:42:57 by kzebian          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
